[package]
name = "pro"
version = "0.1.0"
edition = "2021"
authors = ["dravenk <longxianwen@outlook.com>"]
# pro for rust
description = "Pro is a collection of macros in Rust."
readme = "README.md"
repository = "https://github.com/dravenk/pro/"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/pro"
keywords = ["macros", "pro", "rust"]

[dependencies]
